--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -160,7 +160,7 @@
 <p>Heather is starting work for Robert, who owns the corner store in her neighborhood. They both agreed on the telephone that she would work from 7:30AM to 4:30PM, Monday to Friday, earning $10 an hour.</p>
 <p>Robert and Heather have entered into a valid verbal contract of service and, as a result, they have an employer-employee relationship. </p>
 </details>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
 
  </div>
 
@@ -174,7 +174,7 @@
 <p>IT Computers Ltd. hires Paul’s services under a written agreement for a period of 3 months. Paul’s Beautiful Gardens will maintain the lawns and shrubs for a monthly fee of $2,000.</p>
 <p>In this case, Paul has an agreement to perform specific work for IT Computers Ltd. in return for payment. Paul has entered into a valid contract for services with IT Computers Ltd. and is considered a self-employed individual.</p>
 </details>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
 </div>
 
 </form></div></div>
@@ -409,14 +409,14 @@
 <div id="ajax-2cyes2_2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>Workers who are employees generally have a job title or position within the payer’s organization. </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
 
 </div>
 
 <div id="ajax-2cno2_2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>Workers who are self-employed would not have an official job title or position within the payer’s organization. </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
 </div>
 </form></div></div>
 
@@ -512,18 +512,20 @@
 <div id="ajax-3yes4" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The payer has greater control over when certain tasks should be completed. </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
 </div>
 
 
 <div id="ajax-3no4" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker has greater control over when certain tasks are to be completed. </p>
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
 </div>
+
 <div id="ajax-3no4b" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user-slash text-primary fa-1x"> </span> Indicator: Facts are neutral</h4>
 <p>The client is not indicative of an employee or self-employed. </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
 </div>
 </form></div></div>
 
@@ -672,13 +674,13 @@
 <div id="ajax-4yes6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The worker will not have any financial risk as any expenses will be reimbursed.</p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
 </div>
 
 <div id="ajax-4no6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker bears financial risk and responsibility for their own expenses.</p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
 </div>
 </form></div></div>
 
@@ -944,13 +946,13 @@
 <div id="ajax-5n1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The worker is an employee as the payer and the worker refer to a relationship of employment.</p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
 </div>
 
 <div id="ajax-5n2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker is generally an independent contractor when there is no information demonstrating that there is a relationship of employment.  </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
 </div>
 </form></div></div>
 
