--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -182,7 +182,7 @@
  </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-file-contract text-info"> </span>&nbsp;&nbsp; Factor 2 - Documents to review</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-file-contract text-info"> </span>&nbsp;&nbsp;&nbsp; Factor 2 - Documents to review</h2></summary>
 <p id="2_2" class="brdr-bttm">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
 
 <div id="ajax-2a1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
