--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -816,7 +816,7 @@ html:lang(fr) .cnjnctn-or:before {
       <li>File a return</li>
       <li>Pay the tax</li>
     </ul>
-    <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
+    <h2 id="determine">Determine if you are an affected or excluded residential property owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
     <div class="wb-tabs mrgn-tp-lg">
       <div class="tabpanels">
