--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -834,6 +834,13 @@ html:lang(fr) .cnjnctn-or:before {
                   <div>
                     <p class="text-muted gc-font-2019">Make a selection and <strong> scroll down</strong> for further questions and results.</p>
                     <p><strong>Note:</strong> Each set of questions applies separately to each residential property owned (if more than one property is owned).</p>
+
+<section class="alert alert-info">
+  <h3>Current status of the call for applications: Closed</h3>
+  <p>Thank you for your interest in Canada Summer Jobs. Applications are now closed.</p>
+</section>
+
+			  
                   </div>
                   <p class="wb-fieldflow-label">You are: </p>
                 </div>
