--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -133,12 +133,9 @@
 <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
 <h3 id="h-1">Gather the facts</h3>
-<ol class="lst-stps stps-strpd">
-<li><h3>Contract arrangement</h3> 
-<div id="contract_2">
+<details open="open"><summary> <h2 class="h3 text-info" id="factor1"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 1 - Contract arrangement</h2></summary>
 <p id="1" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the working status they choose must reflect their working relationship.</p>
 
-<details><summary>Factor 1 - Questions and indicators</summary>
 <div id="ajax-cont1"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>At the time of contracting, how did the parties intend to characterize the relationship? </p>
@@ -199,14 +196,11 @@
 <p>A short term contract could be an indication of self-employed. The working relationship between the payer and the worker does not present a degree of continuity, loyalty, security, or integration, all of which are generally associated with an employer-employee relationship.</p>
 </div>
 
-</form></div></div></details></div>
-</li>
+</form></div></div></details>
 
-
-<li><h3>Control </h3>
+<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 2 - Control</h2></summary>
 <p id="2" class="brdr-bttm">Control is the ability, authority, or right of a payer to exercise control over a worker concerning the manner in which the work is done and what work will be done. Consider the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker. </p>
 
-<details><summary>Factor 2 - Questions and indicators</summary>
 <div id="ajax-2a1"><div class="wb-frmvld gc-font-2019"><form method="get">
 
 
@@ -813,11 +807,10 @@
 <p>The worker is responsible through the contract to pay for their own training and associated costs.</p>
 </div>
 </form></div></div>
+</details>
 
-</details></li>
-
-
-<li><h3> Ownership of the tools and equipment</h3>
+	      
+<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 3 - Ownership of the tools and equipment</h2></summary>
 <p id="3">Consider if the worker owns and provides tools and equipment to accomplish the work. Contractual control of, and responsibility for, an asset in a rental or lease situation is also considered under this factor.</p>	
 <details><summary>What is considered a significant investment</summary>
 <p>What is relevant is the significant investment in the tools and equipment along with the cost of replacement, repair, and insurance. A worker who has made a significant investment is likely to retain a right over the use of these assets, diminishing the payer's control over how the work is carried out. In addition, such a significant investment may place the worker at a risk of a financial loss.</p>
@@ -825,8 +818,7 @@
 <p>Self-employed individuals often supply the tools and equipment required for a contract. As a result, the ownership of tools and equipment by a worker is more commonly associated with a business relationship.</p>
 <p>However, employees sometimes also have to provide their own tools. The courts have acknowledged that because a worker is required to provide tools of the trade, this does not in itself mean that the worker is a self-employed individual. For example, many skilled tradespeople such as auto mechanics have to supply their own tools, even if they are full-time employees.</p>
 </details>
-<p class="brdr-bttm"></p>
-<details><summary>Factor 3 - Questions and indicators</summary>
+
 <div id="ajax-tool1"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Who owns the most important tools that the worker uses while performing services for the payer?</p>
@@ -947,11 +939,10 @@
 
 </form></div></div>
 </details>
-</li>
 
-<li><h3>Subcontracting work or hiring assistants</h3>
+
+<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 4 - Subcontracting work or hiring assistants</h2></summary>
 <p id="4" class="brdr-bttm">Consider if the worker can subcontract work or hire assistants. This factor can help decide a worker's business presence because subcontracting work or hiring assistants can affect their chance of profit and risk of loss.</p>
-<details><summary>Factor 4 - Questions and indicators</summary>
 <div id="ajax-sub1"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Can the worker subcontract the work without the approval of the payer?</p>
@@ -991,17 +982,16 @@
 <p>The worker can hire helpers or assistants without the approval of the payer.</p>
 </div>
 </form></div></div>
-</details></li>
+</details>
 
-<li><h3>Financial risk</h3>
+<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 5 - Financial risk</h2></summary>
 <p id="5">Consider the degree of financial risk taken by the worker. Consider if there are any fixed ongoing costs incurred by the worker or any expenses that are not reimbursed.</p>
 <details><summary>Employees will usually not have financial risks</summary>
 <p>Usually, employees will not have any financial risk as any expenses will be reimbursed, and they will not have fixed ongoing costs.</p>
 <p>Self-employed individuals, on the other hand, can have financial risk and incur losses because they usually pay fixed monthly costs even if work is not currently being done.</p>
 <p>Employees and self-employed individuals may be reimbursed for business or travel expenses. Therefore, focus on the expenses that are <strong>not </strong>reimbursed by the payer.</p>
 </details>
-<p class="brdr-bttm"> </p>
-<details><summary>Factor 5 - Questions and indicators</summary>
+
 <div id="ajax-5_1"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Does the payer reimburse the worker for any expenses (for example: travel expenses, vacation pay, benefits) ? </p>
@@ -1192,12 +1182,9 @@
 </div>
 </form></div></div>
 </details>
-</li>
 
-<li><h3>Responsibility for investment and management</h3>
+<details><summary> <h2 class="h3 text-info" id="factor6"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 6 - Responsibility for investment and management</h2></summary>
 <p id="6" class="brdr-bttm">Consider the degree of responsibility for investment and management held by the worker. A significant investment is evidence that a business relationship may exist. You should also consider if the worker is free to make business decisions that affect their profit or loss.</p>
-
-<details><summary>Factor 6 - Questions and indicators</summary>
 
 <div id="ajax-6_1"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
@@ -1506,9 +1493,9 @@
 </form></div></div>
 
 </details>
-</li>
 
-<li><h3> Opportunity for profit (incorporated employee (such as PSBs) or a self-employed through their own corp) </h3>
+
+<details><summary> <h2 class="h3 text-info" id="factor7"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 7 - Opportunity for profit (incorporated employee (such as PSBs) or a self-employed through their own corp) </h2></summary>
 <p id="7">Consider whether the worker can realize a profit or incur a loss, as this indicates that a worker controls the business aspects of services rendered and that a business relationship likely exists. To have a chance of a profit and a risk of a loss, a worker has to have potential proceeds and expenses, and one could exceed the other.</p>
 <details><summary>Consider this factor from the worker's perspective</summary>
 <p>This factor has to be considered from the worker's perspective, not the payer's. It is for the most part an assessment of the degree to which the worker can control their proceeds and expenses.</p>
@@ -1519,8 +1506,7 @@
 <p>The method of payment may help to decide if the worker has the opportunity to make a profit or incur a loss. In an employer-employee relationship, the worker is normally guaranteed a return for the work done and is usually paid on an hourly, daily, weekly, or similar basis.</p>
 <p>Similarly, some self-employed individuals are paid on an hourly basis. However, when a worker is paid a flat rate for the work done, it generally indicates a business relationship, especially if the worker incurs expenses in doing the work.</p>
 </details>
-<p class="brdr-bttm"> </p>
-<details><summary>Factor 7 - Questions and indicators</summary>
+
 <div id="ajax-7_1"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Is the work relationship continuous in nature, which is, is the work guaranteed? </p>
@@ -1710,11 +1696,12 @@
 </div>
 </form></div></div>
 
-</details></li>
+</details>
 
-</ol>
-<div id="facts" >	
-<details><summary> Analyze the facts</summary> 
+
+<div id="ajax-facts">
+<h3>Make your final analysis based on the 5 factors</h3>
+<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1723,12 +1710,12 @@
 </ul>
  </details>
 
-<details><summary>Weighing the facts</summary> 
+<details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-balance-scale text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
  </details>
 
-<details><summary>Review each situation on a case-by-case basis</summary> 
+<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-search-location text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
  </details>
 </div>   
