remove note/add alert

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -833,11 +833,12 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-header">
                   <div>
                     <p class="text-muted gc-font-2019">Make a selection and <strong> scroll down</strong> for further questions and results.</p>
-                    <p><strong>Note:</strong> Each set of questions applies separately to each residential property owned (if more than one property is owned).</p>
+             
 
 <section class="alert alert-info">
-  <h3>Current status of the call for applications: Closed</h3>
-  <p>Thank you for your interest in Canada Summer Jobs. Applications are now closed.</p>
+  
+  <p>Each set of questions applies separately to each owner of a residential property (if there is more than one owner)</p>
+	<p>Each set of questions also applies separately to each residential property owned (if more than one property is owned)</p>
 </section>
 
 			  
