--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -814,7 +814,7 @@
 </details>
 
 	      
-<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 3 - Ownership of the tools and equipment</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-tools text-info"> </span>&nbsp;&nbsp; Factor 3 - Ownership of the tools and equipment</h2></summary>
 <p id="3">Consider if the worker owns and provides tools and equipment to accomplish the work. Contractual control of, and responsibility for, an asset in a rental or lease situation is also considered under this factor.</p>	
 <details><summary>What is considered a significant investment</summary>
 <p>What is relevant is the significant investment in the tools and equipment along with the cost of replacement, repair, and insurance. A worker who has made a significant investment is likely to retain a right over the use of these assets, diminishing the payer's control over how the work is carried out. In addition, such a significant investment may place the worker at a risk of a financial loss.</p>
@@ -994,7 +994,7 @@
 </form></div></div>
 </details>
 
-<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 5 - Financial risk</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-money-check-alt text-info"> </span>&nbsp;&nbsp; Factor 5 - Financial risk</h2></summary>
 <p id="5">Consider the degree of financial risk taken by the worker. Consider if there are any fixed ongoing costs incurred by the worker or any expenses that are not reimbursed.</p>
 <details><summary>Employees will usually not have financial risks</summary>
 <p>Usually, employees will not have any financial risk as any expenses will be reimbursed, and they will not have fixed ongoing costs.</p>
