--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -837,8 +837,8 @@ html:lang(fr) .cnjnctn-or:before {
 
 <section class="alert alert-info">
   
-  <p>Each set of questions applies separately to each owner of a residential property (if there is more than one owner)</p>
-	<p>Each set of questions also applies separately to each residential property owned (if more than one property is owned)</p>
+  <p>Each set of questions applies separately to each owner of a residential property (if there is more than one owner).</p>
+	<p>Each set of questions applies separately to each residential property owned (if more than one property is owned).</p>
 </section>
 
 			  
