--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -200,7 +200,7 @@
 
 </form></div></div></details>
 
-<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 2 - Control</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-user-tag text-info"> </span>&nbsp;&nbsp; Factor 2 - Control</h2></summary>
 <p id="2" class="brdr-bttm">Control is the ability, authority, or right of a payer to exercise control over a worker concerning the manner in which the work is done and what work will be done. Consider the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker. </p>
 
 <div id="ajax-2a1"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -949,7 +949,7 @@
 </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 4 - Subcontracting work or hiring assistants</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-user-friends text-info"> </span>&nbsp;&nbsp; Factor 4 - Subcontracting work or hiring assistants</h2></summary>
 <p id="4" class="brdr-bttm">Consider if the worker can subcontract work or hire assistants. This factor can help decide a worker's business presence because subcontracting work or hiring assistants can affect their chance of profit and risk of loss.</p>
 <div id="ajax-sub1"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
@@ -1195,7 +1195,7 @@
 </form></div></div>
 </details>
 
-<details><summary> <h2 class="h3 text-info" id="factor6"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 6 - Responsibility for investment and management</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor6"> <span class="fas fa-donate text-info"> </span>&nbsp;&nbsp; Factor 6 - Responsibility for investment and management</h2></summary>
 <p id="6" class="brdr-bttm">Consider the degree of responsibility for investment and management held by the worker. A significant investment is evidence that a business relationship may exist. You should also consider if the worker is free to make business decisions that affect their profit or loss.</p>
 
 <div id="ajax-6_1"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -1509,7 +1509,7 @@
 </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor7"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 7 - Opportunity for profit (incorporated employee (such as PSBs) or a self-employed through their own Corporation) </h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor7"> <span class="fas fa-piggy-bank text-info"> </span>&nbsp;&nbsp; Factor 7 - Opportunity for profit (incorporated employee (such as PSBs) or a self-employed through their own Corporation) </h2></summary>
 <p id="7">Consider whether the worker can realize a profit or incur a loss, as this indicates that a worker controls the business aspects of services rendered and that a business relationship likely exists. To have a chance of a profit and a risk of a loss, a worker has to have potential proceeds and expenses, and one could exceed the other.</p>
 <details><summary>Consider this factor from the worker's perspective</summary>
 <p>This factor has to be considered from the worker's perspective, not the payer's. It is for the most part an assessment of the degree to which the worker can control their proceeds and expenses.</p>
