--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1702,39 +1702,20 @@
 <div id="ajax-7no9" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The payer would have first call on the worker’s time. </p>
-<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 7 factors</a></p> 
+
+<p class="mrgn-tp-lg"><a href="#ajax-facts" aria-controls="ajax-facts" class="overlay-lnk" role="button">Make your final analysis based on the 7 factors&nbsp;<span class="far fa-question-circle"></span></a> </p> 
+
 </div>
 
 <div id="ajax-7yes9" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker would set their own schedule and work priorities as they see fit. </p>
-<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 7 factors</a></p> 
+<p class="mrgn-tp-lg"><a href="#ajax-facts" aria-controls="ajax-facts" class="overlay-lnk" role="button">Make your final analysis based on the 7 factors&nbsp;<span class="far fa-question-circle"></span></a> </p> 
 </div>
 </form></div></div>
 
 </details>
 
-
-<div id="ajax-facts">
-<h3>Make your final analysis based on the 5 factors</h3>
-<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
-<p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
-<p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-people-arrows text-info fa-lg"> </span> Worker is an employee</li>
-<li class="cnjnctn-col"><span class="fas fa-user text-info fa-lg"> </span> Worker is self-employed</li>
-</ul>
- </details>
-
-<details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-balance-scale text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
-<p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
-<p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
- </details>
-
-<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-search-location text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
-<p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
- </details>
-</div>   
       </details>
  <details>
         <summary>Read full-text</summary>
@@ -1826,6 +1807,30 @@
 <li class="cnjnctn-col">Each of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a related group and each member of one of the related groups is related to all of the members of the other related group, and one person who is a member of both related groups owned alone, or several persons who are members of both related groups owned together, in respect of each corporation, at least 25% of the issued shares of any class, other than a specified class, of the capital stock thereof </li>
 </ul>
 	</div></section>
+
+<section id="ajax-facts" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Make your final analysis based on the 7 factors</h2>
+	</header>	<div class="modal-body">		
+	
+<h2 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2>
+<p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
+<p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-people-arrows text-info fa-lg"> </span> Worker is an employee</li>
+<li class="cnjnctn-col"><span class="fas fa-user text-info fa-lg"> </span> Worker is self-employed</li>
+</ul>
+
+
+ <h2 class="h3 text-info" id="weight"> <span class="fas fa-balance-scale text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2>
+<p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
+<p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
+
+
+<h2 class="h3 text-info" id="case"> <span class="fas fa-search-location text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2>
+<p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
+ 
+	</div></section>
+
+
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
