--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -77,8 +77,8 @@
 
  <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a>
 	</li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
@@ -212,7 +212,7 @@
                You are not sure if the worker is a incorporated employee</h3>
 <hr>
 	
-<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a>.</p>
+<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the worker classification</a>.</p>
 <details><summary>Why do you need to determine if the worker is considered an employee</summary>
 <p>A corporation is a PSB if the incorporated employee that provides services to the person on behalf of the corporation <strong>could reasonably be considered an employee of that person if the corporation did not exist</strong>.</p>
 <p>An <strong>employee-employer relationship </strong>between the incorporated employee and the person that received the services must be shown. Both are therefore bound by a contract of employment instead of a contract of enterprise. </p>
@@ -226,7 +226,7 @@
                Indicator: The worker is not an incorporated employee</h3>
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a></p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the worker classification</a></p>
 </div>
 
 
