--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -346,13 +346,13 @@
 
 <h2 id="h_4">References</h2>
 
-<h3 id="h_4_2">Legislation</h3>
+<h3 id="h_4_2">Court cases</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="">ITA: </a> </dt> <dd>description </dd>
-<dt><a href="">CPP: </a> </dt> <dd>description </dd>
-<dt><a href="">EIA: </a> </dt> <dd>description </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Pollet v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Jones v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Johnston v. M.N.R.</dd>
 </dl>
 	
 </div>
