--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -75,6 +75,8 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
+<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
 <li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
       <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a>
