--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -350,9 +350,9 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Pollet v. M.N.R.</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Jones v. M.N.R.</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">Tax Court of Canada</a> </dt> <dd>Johnston v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">2000-5076-EI</a> </dt> <dd>Tax Court of Canada - Pollet v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">96-1942-UI</a> </dt> <dd>Tax Court of Canada - Jones v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">97-254-UI, 97-255-UI, 97-256-UI</a> </dt> <dd>Tax Court of Canada - Johnston v. M.N.R.</dd>
 </dl>
 	
 </div>
