--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1753,13 +1753,13 @@
 	 
 <h2 id="h-4">References</h2>
 
-<h3 id="h_6_2">Legislation</h3>
+<h3 id="h_6_2">Legislation and Court cases</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">SCC: 27820</a> </dt> <dd>671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">FCA: A-443-04</a> </dt> <dd>Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">FCA: A-563-00</a> </dt> <dd>Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
+<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">27820</a> </dt> <dd>Supreme Court - 671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">A-443-04</a> </dt> <dd>Federal Court of Appeal - Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">A-563-00</a> </dt> <dd>Federal Court of Appeal - Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-5/#wb-cont">CEA 2</a> </dt> <dd>Canada Evidence Act, R.S., 1985, c. C-5</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/l-2/#wb-cont">CLC 4</a> </dt> <dd>Canada Labour Code</dd>
 <dt><a href="https://www.legisquebec.gouv.qc.ca/en/document/cs/ccq-1991">CCQ 2085 and 2098</a> </dt> <dd>Civil Code of Quebec, S.Q. 1991, c. 64 </dd>
