--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -256,11 +256,12 @@
 
 <div data-ajax-replace="#ajax-contract"></div>
 
-<p>Learn more: </p>
-<ul>
-	<li><a href="#contract-null" aria-controls="contract-null" class="overlay-lnk" role="button">Who decides when a contract is null and void&nbsp;<span class="far fa-question-circle"></span></a> </li>
-   <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of termination of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
-
+<details><summary>Who decides when a contract is nul and void</summary>
+<div data-ajax-replace="#ajax-contract-null"></div>
+</details>
+<details><summary>Examples of termination of a contract</summary>
+<div data-ajax-replace="#ajax-contract-stop"></div>
+</details>
 
 <p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a></p>
 </div>
