--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -252,7 +252,7 @@
  <h3><small>Your result </small><br>
              Indicator: Contract is valid</h3>
 <hr>
-<p class="mrgn-bttm-md">Generally, the following applies when the contract is valid:</p>
+<p>Generally, the following applies when the contract is valid:</p>
 
 <div data-ajax-replace="#ajax-contract"></div>
 
