--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -247,6 +247,7 @@
         <h2 id="hdng4">Employment-related income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
+<div id="ajax-benefits"> 
 <details><summary>Registered pension plan benefits</summary>
 <p>If you receive registered pension plan (RPP) benefits as a result of employment income that was exempt from income tax under section 87 of the Indian Act, the RPP benefits will also be exempt from income tax. If a portion of your employment income was exempt, then a similar portion of the related registered pension plan benefits will be exempt from income tax.</p>
 </details>  
@@ -259,7 +260,7 @@
 <details><summary>Survivor pension benefits</summary>
 <p>If you are an Indian and, as a beneficiary, receive survivor pension benefits that relate to the deceased member’s employment income that was wholly or partially exempt from tax under section 87 of the Indian Act, the amount you receive will also be wholly or partially exempt from income tax in the same proportion as the employment income to which it relates.</p>
 </details>  
-  
+  </div>
         <h2 id="hdng5">Business income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>A business is an activity that you intend to carry on for profit and includes:</p>
