--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -318,6 +318,9 @@
 
 <p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
 
+<p> <a href="#ajax-type-emp-related" aria-controls="ajax-type-emp-related" class="overlay-lnk" role="button">Type of employment-related income <span class="far fa-question-circle"></span></a> </p>
+
+
 <p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example employment-related income <span class="far fa-question-circle"></span></a> </p>
 </div>
 </details>
@@ -1084,6 +1087,12 @@
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4b"></div>
 	</div></section>
+
+<section id="ajax-type-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Type of employment-related income</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-benefits"></div>
+	</div></section>
+
 
 <section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
 	</header>	<div class="modal-body">		
